<resources>
    <string name="app_name">Feed Me</string>
    <string name="judul">Makan Apa</string>
    <string name="subjudul">Makan Apa \n Hari Ini?</string>
    <string name="btn_cari">Cari</string>
    <string name="btn_home">Home</string>
    <string name="btn_cari_menu">Cari</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_exit">Exit</string>
    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>
    <string name ="et_menu">Menu</string>
    <string name ="ayam">Ayam Goreng</string>
    <string name="header">Menu</string>
    <string name="des">Deskripsi : </string>
    <string name="tag">Tag : </string>
    <string name="bahan">Bahan : </string>
    <string name="langkah">Langkah memasak : </string>
    <string name="lokasi">Tersedia di resto : </string>
    <string name="new_menu_title">New Menu : </string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add">Add</string>
    <string name="btn_plus">+</string>
</resources>