<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="350dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/new_menu_title"
                android:textColor="@color/black"
                android:padding="@dimen/pad_info"
                android:layout_weight="2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Tambahkan menu baru"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/pad_info"
            android:text="@string/des"/>

        <EditText
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/pad_info"
            android:hint="Tuliskan deskripsi"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="@dimen/pad_info"
                android:text="@string/tag"
                android:layout_weight="6"/>

            <EditText
                android:id="@+id/tv_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/pad_info"
                android:hint="Tuliskan tag"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/pad_info"
            android:text="@string/bahan"/>

        <EditText
            android:id="@+id/tv_bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/pad_info"
            android:hint="Tuliskan bahan-bahan"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/pad_info"
            android:text="@string/langkah"/>

        <EditText
            android:id="@+id/tv_langkah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="Tuliskan langkah memasak"
            android:paddingLeft="@dimen/pad_info"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/pad_info"
            android:text="@string/lokasi"/>

        <EditText
            android:id="@+id/tv_lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="Tulisan alamat"
            android:paddingLeft="@dimen/pad_info"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:padding="@dimen/pad_info">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add"/>

        </LinearLayout>

    </LinearLayout>



</FrameLayout>