<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10px"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        android:textAlignment="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_home"
            android:id="@+id/btn_home"
            android:background="@android:color/white"
            />

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/btn_cari_menu"-->
<!--            android:id="@+id/btn_cari_menu"-->
<!--            android:background="@android:color/white"-->
<!--            />-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu"
            android:id="@+id/btn_menu"
            android:background="@android:color/white"
            />

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/btn_setting"-->
<!--            android:id="@+id/btn_setting"-->
<!--            android:background="@android:color/white"-->
<!--            />-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit"
            android:id="@+id/btn_exit"
            android:background="@android:color/white"
            />
    </LinearLayout>


</FrameLayout>